feat:ts-web-component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "preserveSymlinks": true,
     "types": ["node"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["**/src/**/*.ts"],
   "exclude": ["node_modules", "lib/**/*"]
 }
