--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "replicache-express": "^0.1.3"
   },
   "devDependencies": {
+    "@rocicorp/eslint-config": "^0.1.1",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.50",
     "concurrently": "^7.3.0",
@@ -19,9 +20,11 @@
     "typescript": "4.7.4"
   },
   "scripts": {
-    "format": "prettier --write './**/src/*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
+    "format": "prettier --write './**/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
+    "check-format": "prettier --check './**/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "postinstall": "cd ./react/ && npm install && cd ../ts-web-component && npm install",
-    "build": "run-p build:*", 
+    "build": "npm run lint && run-p build:*",
     "build:server": "rm -rf lib && tsc",
     "build:react": "cd ./react/ && rm -rf lib && rm -rf dist && npm run build",
     "build:ts-web-component": "cd ./ts-web-component/ && rm -rf lib && rm -rf dist && npm run build",
@@ -38,30 +41,6 @@
   },
   "type": "module",
   "eslintConfig": {
-    "ecmaFeatures": {
-      "jsx": true,
-      "modules": true
-    },
-    "env": {
-      "browser": true,
-      "node": true
-    },
-    "parser": "babel-eslint",
-    "rules": {
-      "quotes": [
-        2,
-        "single"
-      ],
-      "strict": [
-        2,
-        "never"
-      ],
-      "react/jsx-uses-react": 2,
-      "react/jsx-uses-vars": 2,
-      "react/react-in-jsx-scope": 2
-    },
-    "plugins": [
-      "react"
-    ]
+    "extends": "@rocicorp/eslint-config"
   }
 }
