--- a/react/package.json
+++ b/react/package.json
@@ -4,8 +4,9 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "npm run lint && tsc && vite build",
     "preview": "vite preview",
     "format": "prettier --write './src/*/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'"
   },
@@ -19,6 +20,7 @@
     "todomvc-app-css": "^2.4.2"
   },
   "devDependencies": {
+    "@rocicorp/eslint-config": "^0.1.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
@@ -27,31 +29,7 @@
     "vite": "^3.0.7"
   },
   "eslintConfig": {
-    "ecmaFeatures": {
-      "jsx": true,
-      "modules": true
-    },
-    "env": {
-      "browser": true,
-      "node": true
-    },
-    "parser": "babel-eslint",
-    "rules": {
-      "quotes": [
-        2,
-        "single"
-      ],
-      "strict": [
-        2,
-        "never"
-      ],
-      "react/jsx-uses-react": 2,
-      "react/jsx-uses-vars": 2,
-      "react/react-in-jsx-scope": 2
-    },
-    "plugins": [
-      "react"
-    ]
+    "extends": "@rocicorp/eslint-config"
   },
   "prettier": {
     "singleQuote": false,
