--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "outDir": "lib",
     "allowJs": true,
     // esnext for Object.fromEntries
-    "lib": ["dom", "esnext"],
+    "lib": ["dom", "DOM.Iterable", "esnext"],
     "preserveSymlinks": true,
     "types": ["node"]
   },
