--- a/package.json
+++ b/package.json
@@ -6,29 +6,30 @@
   "scripts": {
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "dev": "vite",
+    "dev-worker": "wrangler dev --local --experimental-enable-local-persistence",
     "build": "npm run lint && tsc && vite build",
     "preview": "vite preview",
     "format": "prettier --write './src/*/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@rocicorp/eslint-config": "^0.1.0",
     "@rocicorp/reflect": "^0.7.0",
     "@rocicorp/reflect-server": "^0.14.0",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.0.1",
     "classnames": "^2.3.1",
+    "miniflare": "2.6.0",
+    "nanoid": "^4.0.0",
+    "prettier": "^2.2.1",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "replicache-react": "^2.6.0",
-    "todomvc-app-css": "^2.4.2"
-  },
-  "devDependencies": {
-    "@rocicorp/eslint-config": "^0.1.0",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.1",
-    "nanoid": "^4.0.0",
-    "prettier": "^2.2.1",
+    "todomvc-app-css": "^2.4.2",
     "typescript": "^4.7.4",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "wrangler": "2.0.24"
   },
   "eslintConfig": {
     "extends": "@rocicorp/eslint-config"
