--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@rocicorp/eslint-config": "^0.1.0",
+    "@rocicorp/rails": "^0.2.2",
     "@rocicorp/reflect": "^0.7.0",
     "@rocicorp/reflect-server": "^0.14.0",
     "@types/react": "^18.0.17",
@@ -29,7 +30,8 @@
     "todomvc-app-css": "^2.4.2",
     "typescript": "^4.7.4",
     "vite": "^3.0.7",
-    "wrangler": "2.0.24"
+    "wrangler": "2.0.24",
+    "zod": "^3.19.1"
   },
   "eslintConfig": {
     "extends": "@rocicorp/eslint-config"
