--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "replicache-express": "^0.1.3"
   },
   "devDependencies": {
-    "@rocicorp/eslint-config": "^0.1.1",
+    "@rocicorp/prettier-config": "^0.1.1",
+    "@rocicorp/eslint-config": "^0.1.2",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.50",
     "concurrently": "^7.3.0",
@@ -20,7 +21,7 @@
     "typescript": "4.7.4"
   },
   "scripts": {
-    "format": "prettier --write './**/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
+    "format": "prettier --write './**/src/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
     "check-format": "prettier --check './**/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "postinstall": "cd ./react/ && npm install && cd ../ts-web-component && npm install",
@@ -43,6 +44,7 @@
   "eslintConfig": {
     "extends": "@rocicorp/eslint-config"
   },
+  "prettier": "@rocicorp/prettier-config",
   "engines": {
     "node": ">=16.15.0",
     "npm": ">=7.0.0"
