--- a/ts-web-component/package.json
+++ b/ts-web-component/package.json
@@ -17,7 +17,8 @@
     "replicache-react": "^2.9.0"
   },
   "devDependencies": {
-    "@rocicorp/eslint-config": "^0.1.1",
+    "@rocicorp/prettier-config": "^0.1.1",
+    "@rocicorp/eslint-config": "^0.1.2",
     "prettier": "^2.2.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
@@ -25,12 +26,5 @@
   "eslintConfig": {
     "extends": "@rocicorp/eslint-config"
   },
-  "prettier": {
-    "singleQuote": false,
-    "trailingComma": "es5",
-    "arrowParens": "always",
-    "bracketSpacing": true,
-    "tabWidth": 2,
-    "useTabs": false
-  }
+  "prettier": "@rocicorp/prettier-config"
 }
