--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,32 @@
 {
-  "name": "replicache-quickstarts",
+  "name": "replicache-quickstarts-server",
   "version": "0.1.0",
   "private": true,
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "replicache": ">=11.2.1",
+    "replicache-express": "^0.1.4",
+    "replicache-quickstarts-shared": "file:../shared"
+  },
   "devDependencies": {
     "@rocicorp/eslint-config": "^0.1.2",
     "@rocicorp/prettier-config": "^0.1.1",
-    "npm-run-all": "^4.1.5",
-    "typescript": "4.7.4"
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.50",
+    "ts-node": "^10.9.1",
+    "typescript": "4.7.4",
+    "nodemon": "^2.0.19"
   },
   "scripts": {
     "format": "prettier --write './**/src/**/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
     "check-format": "prettier --check './**/src/*/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
-    "build": "npm run build -ws"
+    "build": "rm -rf ./dist && npm run lint && tsc",
+    "typecheck": "tsc -b",
+    "tsc-version": "tsc -v",
+    "dev": "nodemon",
+    "prod": "NODE_ENV=production node --loader ts-node/esm  --experimental-specifier-resolution=node ./dist/server.js"
   },
   "type": "module",
   "eslintConfig": {
@@ -22,10 +36,5 @@
   "engines": {
     "node": ">=16.15.0",
     "npm": ">=7.0.0"
-  },
-  "workspaces": [
-    "client/*",
-    "server",
-    "shared"
-  ]
+  }
 }
