--- a/client/react/package.json
+++ b/client/react/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
+    "check-types": "tsc --noEmit",
     "dev": "vite",
     "build": "npm run lint && tsc && vite build",
     "build:server": "cd ../../server && npm run build",
@@ -12,7 +13,8 @@
     "format": "prettier --write './src/*/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
     "clean": "rm -rf ./dist && mkdir -p ./dist",
     "prod": "npm run build:server && npm run clean && npm run build && cp -r ./dist/ ../../server/dist/ && cd ../../server && npm run prod",
-    "server": "cd ../../server && npm run dev"
+    "server": "cd ../../server && npm run dev",
+    "watch": "concurrently --kill-others 'npm run server' 'npm run check-types -- --watch' 'npm run dev'"
   },
   "dependencies": {
     "classnames": "^2.3.1",
@@ -20,19 +22,20 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "replicache": ">=11.2.1",
+    "replicache-quickstarts-shared": "^0.1.0",
     "replicache-react": "^2.9.0",
-    "todomvc-app-css": "^2.4.2",
-    "replicache-quickstarts-shared": "^0.1.0"
+    "todomvc-app-css": "^2.4.2"
   },
   "devDependencies": {
-    "@rocicorp/prettier-config": "^0.1.1",
     "@rocicorp/eslint-config": "^0.1.2",
+    "@rocicorp/prettier-config": "^0.1.1",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
     "prettier": "^2.2.1",
     "typescript": "^4.7.4",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "concurrently": "^7.4.0"
   },
   "eslintConfig": {
     "extends": "@rocicorp/eslint-config"
