--- a/client/ts-web-component/package.json
+++ b/client/ts-web-component/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "dev": "vite",
+    "check-types": "tsc --noEmit",
     "build": "npm run lint && tsc && vite build",
     "build:server": "cd ../../server && npm run build",
     "preview": "vite preview",
@@ -13,7 +14,8 @@
     "check-format": "prettier --check './**/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
     "clean": "rm -rf ./dist && mkdir -p ./dist",
     "prod": "npm run build:server && npm run clean && npm run build && cp -r ./dist/ ../../server/dist/ && cd ../../server && npm run prod",
-    "server": "cd ../../server && npm run dev"
+    "server": "cd ../../server && npm run dev",
+    "watch": "concurrently --kill-others 'npm run server' 'npm run check-types -- --watch' 'npm run dev'"
   },
   "dependencies": {
     "nanoid": "^4.0.0",
@@ -26,11 +28,11 @@
     "@rocicorp/eslint-config": "^0.1.2",
     "prettier": "^2.2.1",
     "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "concurrently": "^7.4.0"
   },
   "eslintConfig": {
     "extends": "@rocicorp/eslint-config"
   },
   "prettier": "@rocicorp/prettier-config"
-  
 }
