--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "devDependencies": {
     "@rocicorp/eslint-config": "^0.1.2",
     "@rocicorp/prettier-config": "^0.1.1",
-    "npm-run-all": "^4.1.5",
     "typescript": "4.7.4"
   },
   "scripts": {
-    "format": "prettier --write './**/src/**/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
-    "check-format": "prettier --check './**/src/*/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
-    "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
-    "build": "npm run build -ws"
+    "format": "npm run format --ws",
+    "check-format": "npm run check-format --ws",
+    "lint": "npm run lint --ws",
+    "build": "npm run build -ws",
+    "check-types": "npm run check-types --ws"
   },
   "type": "module",
   "eslintConfig": {
