--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "express": "^4.18.1",
     "replicache": ">=11.2.1",
     "replicache-express": "^0.1.4",
-    "replicache-quickstarts-shared": "file:../shared"
+    "replicache-quickstarts-shared": "^0.1.0"
   },
   "devDependencies": {
     "@rocicorp/eslint-config": "^0.1.2",
@@ -23,8 +23,7 @@
     "check-format": "prettier --check './**/src/*/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "build": "rm -rf ./dist && npm run lint && tsc",
-    "typecheck": "tsc -b",
-    "tsc-version": "tsc -v",
+    "check-types": "tsc --noEmit",
     "dev": "nodemon",
     "prod": "NODE_ENV=production node --loader ts-node/esm  --experimental-specifier-resolution=node ./dist/server.js"
   },
