--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,11 +12,12 @@
     "declaration": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "outDir": "lib",
+    "outDir": "dist",
     "allowJs": true,
     // esnext for Object.fromEntries
     "lib": ["dom", "DOM.Iterable", "esnext"],
-    "preserveSymlinks": true
+    "preserveSymlinks": true,
+    "types": ["node"]
   },
   "include": ["**/src/**/*.ts"],
   "exclude": ["node_modules", "lib"]
