--- a/client/react/package.json
+++ b/client/react/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "check-types": "tsc --noEmit",
     "dev": "vite",
-    "build": "npm run lint && tsc && vite build",
+    "build": "tsc && vite build",
     "build:server": "cd ../../server && npm run build",
     "preview": "vite preview",
     "format": "prettier --write './src/**/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
