--- a/server/package.json
+++ b/server/package.json
@@ -31,9 +31,5 @@
   "eslintConfig": {
     "extends": "@rocicorp/eslint-config"
   },
-  "prettier": "@rocicorp/prettier-config",
-  "engines": {
-    "node": ">=16.15.0",
-    "npm": ">=7.0.0"
-  }
+  "prettier": "@rocicorp/prettier-config"
 }
