--- a/client/nextjs/package.json
+++ b/client/nextjs/package.json
@@ -6,13 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "format": "prettier --write './**/*.{js,jsx,json,ts,tsx,html,css,md}'"
+    "format": "prettier --write './**/*.{js,jsx,json,ts,tsx,html,css,md}'",
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
+    "check-types": "tsc --noEmit"
   },
   "engines": {
     "//": "replicache-nextjs requires npm >= 7. This was released in Node 15, but 16 is current stable so we choose that. Render looks at package.json to determine which Node to use: https://render.com/docs/node-version.",
-    "node": ">=16.0.0"
+    "node": ">=16.15.0"
   },
   "dependencies": {
+    "nanoid": "^4.0.0",
     "classnames": "^2.3.1",
     "next": "^12.1.6",
     "react": "^18.2.0",
