--- a/client/nextjs/package.json
+++ b/client/nextjs/package.json
@@ -26,15 +26,15 @@
     "replicache-nextjs": "^0.4.0",
     "replicache-react": "^2.9.0",
     "todomvc-app-css": "^2.4.2",
-    "replicache-quickstarts-shared": "^0.1.0",
-    "next-transpile-modules": "^9.0.0"
+    "replicache-quickstarts-shared": "^0.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.11",
     "typescript": "^4.7.4",
     "@rocicorp/eslint-config": "^0.1.2",
-    "@rocicorp/prettier-config": "^0.1.1"
+    "@rocicorp/prettier-config": "^0.1.1",
+    "next-transpile-modules": "^9.0.0"
   },
   "eslintConfig": {
     "extends": "@rocicorp/eslint-config"
