--- a/render.yaml.example
+++ b/render.yaml.example
@@ -9,14 +9,8 @@ services:
     numInstances: 1 # optional (defaults to 1)
     envVars:
       - key: VITE_REPLICACHE_LICENSE_KEY 
-        value: TODO_PUT_LICENSE_KEY_HERE
+        value: <license_key> # change e.g. (VITE_REPLICACHE_LICENSE_KEY: 1234567890)
       - key: NODE_VERSION
         value: 16.15.1
       - key: DATABASE_URL
-        fromDatabase:
-          name: replicache-todo
-          property: connectionString
-
-databases:
-  - name: replicache-todo
-    databaseName: db
+        value: <database uri> # e.g. postgres://postgres:postgres@localhost:5432/postgres
