--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "replicache": ">=11.2.1",
-    "replicache-express": "^0.1.4",
+    "replicache-express": "^0.1.5",
     "replicache-quickstarts-shared": "^0.1.0"
   },
   "devDependencies": {
@@ -14,9 +14,9 @@
     "@rocicorp/prettier-config": "^0.1.1",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.50",
+    "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
-    "typescript": "4.7.4",
-    "nodemon": "^2.0.19"
+    "typescript": "4.7.4"
   },
   "scripts": {
     "format": "prettier --write './src/**/*.{js,jsx,json,ts,tsx,html,css,md}' '*.{cjs,js,jsx,json,ts,tsx,html,css,md}'",
