--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "devDependencies": {
     "@rocicorp/eslint-config": "^0.1.0",
     "@rocicorp/rails": "^0.2.2",
-    "@rocicorp/reflect": "^0.13.1",
-    "@rocicorp/reflect-server": "^0.22.0",
+    "@rocicorp/reflect": "file:rocicorp-reflect-0.13.0-beta.0.tgz",
+    "@rocicorp/reflect-server": "file:rocicorp-reflect-server-0.22.0-beta.0.tgz",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
